--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
 		</repository>
 		
 		<repository>
-    		<id>ukp-oss</id>
-    		<url>https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-snapshots-local/</url>
+    		<id>JBoss Deprecated</id>
+    		<url>https://repository.jboss.org/nexus/content/repositories/deprecated</url>
 		</repository>
 
 	</repositories>
@@ -61,6 +61,21 @@
 			<artifactId>
 				dkpro.similarity.algorithms.lexical-gpl
 			</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+      		<groupId>trove</groupId>
+      		<artifactId>trove</artifactId>
+      		<version>2.1.1</version>
+   		</dependency>
+		<dependency>
+			<groupId>dkpro.similarity</groupId>
+			<artifactId>dkpro.similarity.algorithms.lsr-asl</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>dkpro.similarity</groupId>
+			<artifactId>dkpro.similarity.algorithms.lsr-gpl</artifactId>
 			<version>2.1.0</version>
 		</dependency>
 	</dependencies>
