--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,28 @@
 			<artifactId>dkpro.similarity.algorithms.lsr-gpl</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+			<artifactId>
+				de.tudarmstadt.ukp.dkpro.wsd.si.wordnet
+			</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>net.sf.extjwnl</groupId>
+    		<artifactId>extjwnl</artifactId>
+    		<version>1.7.1</version>
+		</dependency>
+		<dependency>
+    		<groupId>net.sf.extjwnl</groupId>
+    		<artifactId>extjwnl-data-wn31</artifactId>
+    		<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.lsr</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
