--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
 			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.lsr</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>dkpro.similarity</groupId>
+			<artifactId>dkpro.similarity.algorithms.vsm-asl</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
